# ning-compiler-cpp

./: .gitignore  20.json  33.json  AST.cpp  AST.hpp  CMakeLists.txt  a.out  analyzer.cpp  analyzer.hpp  compile.sh  global.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  readme.md  run_tests.sh  symtable.cpp  type.cpp  type.hpp
mytest/: bubblesort.sy  densecall.sy  fib.sy  loop.sy  many_param.sy  recursion.sy  rename.sy
src/: AST.cpp  AST.hpp  analyzer.cpp  code_gen.cpp  code_gen.hpp  global.hpp  lexer.cpp  lexer.hpp  main.cpp  optimize.cpp  parser.cpp  parser.hpp  symtable.cpp  symtable.hpp  three_address.cpp  three_address.hpp  type.cpp  type.hpp
src/IR/: three_address.cpp  three_address.hpp
src/backend/: baseblock.cpp  baseblock.hpp  code_gen.cpp  code_gen.hpp  optimize.cpp  optimize.hpp
src/frontend/: analyzer.cpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  symtable.cpp  symtable.hpp
src/global/: AST.cpp  AST.hpp  global.hpp  type.cpp  type.hpp
test_sample/functional_test/: 38_if_complex_expr.sy  40_index_complex_expr.sy
