IF(APPLE)
    set(CMAKE_CXX_COMPILER /usr/local/Cellar/gcc/10.2.0/bin/c++-10)
    set(CMAKE_C_COMPILER /usr/local/Cellar/gcc/10.2.0/bin/cpp-10)
ELSE()
    set(CMAKE_CXX_COMPILER /usr/bin/clang++)
    set(CMAKE_C_COMPILER /usr/bin/clang)
ENDIF()

project(ning)
cmake_minimum_required(VERSION 3.10)
set(CXX_STANDARD 14)
aux_source_directory(src SOURCE)
add_executable(ning ${SOURCE})
